[package]
name = "cooplan-state-tracker"
version = "0.1.0"
edition = "2021"
description = "Tracking utility for tasks' states within Cooplan's microservices"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async runtime

tokio = { version = "1", features = ["full"] }
futures = "0.3.25"

# Logging

log = "0.4.17"

# JSON
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

[dev-dependencies]

simple_logger = "4.0.0"